<resources>
    <string name="app_name">Tutu Test</string>
    <string name="title_activity_main">Tutu Test</string>
    <string name="title_activity_pokemon">Pokemon</string>

    <string name="pokemon_name_filling">Pokemon name</string>
    <string name="pokemon_exp_filling">Pokemon experience</string>
    <string name="pokemon_height_filling">Pokemon height</string>
    <string name="pokemon_weight_filling">Pokemon weight</string>

    <string name="pokemon_exp">Base experience: %1$d</string>
    <string name="pokemon_height">Height: %1$.1f</string>
    <string name="pokemon_weight">Weight: %1$.1f</string>
    <string name="pokemon_image">Pokemon image</string>

    <string name="abilities_list">Abilities list:</string>
    <string name="abilities_list_placing">Abilities list: %1$s</string>
    <string name="ability_hidden">Hidden: %1$b</string>

    <string name="last_update_time_filling">Last update time: none</string>
    <string name="last_update_time">Last update time:\n%1$s</string>
    <string name="reload_but">Reload data</string>

    <string name="db_is_updated_already">Database is up-to-date already</string>
    <string name="db_sync_is_done">Sync with database is done</string>
    <string name="db_is_empty">Database is empty</string>
    <string name="loading_pokemons">Loading pokemons…</string>
    <string name="getting_pokemons_from_db">Getting pokemons from DB…</string>
    <string name="waiting_for_pokemon_to_load">Waiting for pokemon to load…</string>
</resources>